Big performance improvement by returning immutable lists in EmmisaryEventHandlerRegistry